--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ h2 {
   padding:0px;
   margin:0px;
   margin-top: 5px;
+  margin-bottom:2px;
   font-size: 1.5em;
 }
 
@@ -76,6 +77,7 @@ p.SourceJobCounts {
 
 .JobResults li {
   border: 1px dotted gray;
+  margin-top: 3px;
   padding: 5px;
   font-size: 12px;
 }
@@ -97,22 +99,30 @@ div.JobFilters {
 
 div.JobFilters input {
   margin-right: 5px;
+  border: none;
   border-radius: 3px;
-  padding: 3px;
+  padding: 4px;
 }
 div.JobFilters button {
   border: none;
   border-radius: 3px;
   padding: 4px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 ul.Filters {
- list-style-type: none;
- padding-left: 0px;
+  margin-top: 5px;
+  list-style-type: none;
+  padding-left: 0px;
 }
 
-li.FilterItem {
+li.FilterItem {  
   padding: 5px;
+}
+
+li.FilterItem:hover {
+  background-color: gray;
 }
 
 li.FilterItem input[type=checkbox] {
